<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authentication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/h10">

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtAuthDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:padding="20dp"
        android:text="@string/text_otp_received"
        android:textAlignment="center"
        android:textColor="#202020"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/getOtpText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/txtAuthDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:autofillHints="OTP code"
        android:fontFamily="@font/bold"
        android:hint="@string/text_otp_code"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/changeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getOtpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/change_number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <android.widget.Button
        android:id="@+id/btnVerifyOTP"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/changeNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/mybutton"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ProgressBar
        android:id="@+id/progressBarAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVerifyOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible" />

</RelativeLayout>