<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/h10">

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarViewProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="#91067E">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnBackProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/btnBackProfile"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewUserImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/viewUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="130dp">


        <ImageView
            android:id="@+id/viewUserImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/default_pro_pic" />


    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/iconUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@id/viewUserName"
        android:layout_centerInParent="true"
        android:layout_marginStart="-60dp"
        android:contentDescription="@string/dismiss_button_content_description"
        android:src="@drawable/ic_baseline_person_24"
        app:tint="#716e6e" />


    <EditText
        android:id="@+id/viewUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="@font/bold"
        android:hint="@string/enter_your_name_here"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/updateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewUserName"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/want_to_update_your_profile"
        android:textColor="#202020" />


</RelativeLayout>