<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SetProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/h10">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/getUserImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/bold"
        android:text="@string/save_your_profile"
        android:textColor="#0628EA"
        android:textSize="30sp"
        android:textStyle="bold">

    </TextView>


    <androidx.cardview.widget.CardView
        android:id="@+id/getUserImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/getUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="130dp">


        <ImageView
            android:id="@+id/getUserImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/default_pro_pic">

        </ImageView>


    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/getUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:fontFamily="@font/bold"
        android:hint="@string/enter_your_name_here"
        android:importantForAutofill="no"
        android:inputType="textCapWords">

    </EditText>

    <android.widget.Button
        android:id="@+id/saveProfile"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/getUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/mybutton"
        android:text="save"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp">

    </android.widget.Button>


    <ProgressBar
        android:id="@+id/progressBarSetProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible">

    </ProgressBar>


</RelativeLayout>