<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/h10">

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtMainDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:fontFamily="@font/raleway"
        android:padding="20dp"
        android:text="@string/main_otp_desc"
        android:textAlignment="center"
        android:textColor="#202020"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/centerHorLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/pickerCountryCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/centerHorLine"
        android:layout_centerInParent="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        app:ccp_areaCodeDetectedCountry="true"
        app:ccp_autoDetectCountry="true" />

    <EditText
        android:id="@+id/getPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/centerHorLine"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:autofillHints="phone"
        android:hint="@string/text_phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/bold"/>

    <android.widget.Button
        android:id="@+id/btnSendOTP"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/getPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybutton"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="Get OTP"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSendOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible" />

</RelativeLayout>