<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE5DD"
    tools:context=".SpecificChat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSpecChat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="#91067E">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnBachSpecChat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/user_image"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/white">

            </ImageButton>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSpecChat"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/btnBachSpecChat"
                app:cardCornerRadius="35dp">


                <ImageView
                    android:id="@+id/specUserImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_pro_pic">

                </ImageView>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/specUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/cardViewSpecChat"
                android:text="@string/name_of_user"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/getMessage"
        android:layout_below="@id/toolbarSpecChat"
        android:background="@drawable/h12"
        android:padding="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/getMessage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/messagebackground"
        android:hint="@string/type_a_message"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHint="#A8A7A7"
        android:textSize="18sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSendMessage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/getMessage"
        android:backgroundTint="#91067E"
        app:cardCornerRadius="45dp">


        <ImageButton
            android:id="@+id/imageViewSendMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/send_message_image"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/white">

        </ImageButton>


    </androidx.cardview.widget.CardView>


</RelativeLayout>